--- a/apps/storybook/src/stories/Overview.mdx
+++ b/apps/storybook/src/stories/Overview.mdx
@@ -16,8 +16,9 @@ import { Meta } from "@storybook/blocks";
 <style>
   {`
   .sb-container {
-    margin-bottom: 48px;
+    margin-bottom: 4rem;
   }
+
 
   .sb-section {
     width: 100%;
